--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,8 +114,8 @@ option(USERVER_FEATURE_GRPC "Provide asynchronous driver for gRPC" ${USERVER_FEA
 option(USERVER_FEATURE_CLICKHOUSE "Provide asynchronous driver for ClickHouse" ${USERVER_BUILD_PLATFORM_X86})
 option(USERVER_FEATURE_RABBITMQ "Provide asynchronous driver for RabbitMQ" ${USERVER_FEATURE_CORE})
 option(USERVER_FEATURE_MYSQL "Provide asynchronous driver for MariaDB/MySQL" OFF)
-option(USERVER_FEATURE_UBOOST_CORO "Use vendored boost context instead of a system one" ON)
 option(USERVER_FEATURE_AEROSPIKE "Provide synchronous driver for Aerspyke" OFF)
+option(USERVER_FEATURE_UBOOST_CORO "Use vendored boost context instead of a system one" ON)
 
 if (USERVER_FEATURE_GRPC)
     include(cmake/SetupProtobuf.cmake)
@@ -134,6 +134,7 @@ endif()
 
 if (USERVER_IS_THE_ROOT_PROJECT AND USERVER_FEATURE_CORE)
     add_subdirectory(tools/engine)
+    #add_subdirectory(tools/json2yaml)
     add_subdirectory(tools/httpclient)
     add_subdirectory(tools/netcat)
     add_subdirectory(tools/dns_resolver)
@@ -152,6 +153,11 @@ endif()
 if (USERVER_FEATURE_REDIS)
     require_userver_core("USERVER_FEATURE_REDIS")
     add_subdirectory(redis "${CMAKE_BINARY_DIR}/userver/redis")
+endif()
+
+if (USERVER_FEATURE_AEROSPIKE)
+  require_userver_core("USERVER_FEATURE_AEROSPIKE")
+  add_subdirectory(aerospike "${CMAKE_BINARY_DIR}/userver/aerospike")
 endif()
 
 if (USERVER_FEATURE_GRPC)
@@ -174,9 +180,6 @@ if (USERVER_FEATURE_MYSQL)
     add_subdirectory(mysql "${CMAKE_BINARY_DIR}/userver/mysql")
 endif()
 
-if (USERVER_FEATURE_AEROSPIKE)
-  add_subdirectory(aerospike "${CMAKE_BINARY_DIR}/userver/aerospike")
-endif()
 
 if (USERVER_IS_THE_ROOT_PROJECT AND USERVER_FEATURE_CORE)
     add_subdirectory(samples)
